enhance mobile navigation: body overflow-x bug on iOS, pagination

--- a/src/sass/layout/_base.scss
+++ b/src/sass/layout/_base.scss
@@ -14,6 +14,7 @@
 
 body {
   background-color: $body-color;
+  overflow-x: hidden;
 }
 
 .clearfix {
