--- a/src/sass/layout/_pagination.scss
+++ b/src/sass/layout/_pagination.scss
@@ -24,3 +24,9 @@
 .pagination li.active a, .pagination li:hover a {
   background-color: $details-color;
 }
+
+@media only screen and (max-width: 640px) {
+  .pagination li a {
+    padding: 5px 9px;
+  }
+}
